--- a/templates/one.html
+++ b/templates/one.html
@@ -34,6 +34,9 @@
         <label for="name">Name:</label>
         <input type="text" id="name" name="name">
         <br>
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="email">
+        <br>
         <button type="submit">Submit</button>
     </form>
 </body>
